--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run new stock and listing crawl
         env:
@@ -94,7 +94,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run new stock info push
         env:
@@ -121,7 +121,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run intraday data crawl
         env:
@@ -152,7 +152,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run arbitrage scan
         env:
@@ -185,7 +185,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run daily data crawl
         env:
@@ -216,7 +216,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run data cleanup
         env:
@@ -240,7 +240,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run test message
         env:
@@ -264,7 +264,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run test new stock
         env:
@@ -288,7 +288,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run test new stock listings
         env:
@@ -312,7 +312,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run test stock pool
         env:
@@ -336,7 +336,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run test execute
         env:
@@ -360,7 +360,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run test reset
         env:
@@ -383,7 +383,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock jqdatasdk
+          pip install akshare baostock
       
       - name: Run test arbitrage
         env:
