--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -73,7 +73,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Debug info
         run: |
@@ -124,7 +125,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Debug info
         run: |
@@ -177,7 +179,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Debug info
         run: |
@@ -229,7 +232,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Debug info
         run: |
@@ -280,7 +284,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Debug info
         run: |
@@ -347,7 +352,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Debug info
         run: |
@@ -398,7 +404,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Debug info
         run: |
@@ -448,7 +455,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare baostock
+          pip install akshare --pre --force-reinstall
+          pip install baostock
 
       - name: Check if non-trading hours
         id: check_hours
